fix: replace deprecated code