@@ -25,6 +25,7 @@ import org.esupportail.publisher.service.factories.DTOFactory;
 import org.esupportail.publisher.web.rest.dto.AbstractIdDTO;
 
 import java.io.Serializable;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
@@ -93,10 +94,8 @@ public abstract class AbstractDTOFactoryImpl<DTObject extends AbstractIdDTO<ID>,
 
     protected DTObject newDTObject() {
         try {
-            return dtObjectClass.newInstance();
-        } catch (InstantiationException e) {
-            log.error("unable to instantiate Data Transfer Object in factory.");
-        } catch (IllegalAccessException e) {
+            return dtObjectClass.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             log.error("unable to instantiate Data Transfer Object in factory.");
         }
         return null;
@@ -104,13 +103,10 @@ public abstract class AbstractDTOFactoryImpl<DTObject extends AbstractIdDTO<ID>,
 
     protected M newModel() {
         try {
-            return mClass.newInstance();
-        } catch (InstantiationException e) {
-            log.error("unable to instantiate Model object in factory.");
-        } catch (IllegalAccessException e) {
+            return mClass.getDeclaredConstructor().newInstance();
+        } catch (InstantiationException | IllegalAccessException | NoSuchMethodException | InvocationTargetException e) {
             log.error("unable to instantiate Model object in factory.");
         }
-
         return null;
     }
 
